Fix text breaking up on banner when displayed on tablets

--- a/webApp/src/app/banner/banner.component.scss
+++ b/webApp/src/app/banner/banner.component.scss
@@ -109,10 +109,10 @@
                 text-align: center;
                 vertical-align: middle;
                 transform: scaleX(var(--scale, 1));
-                animation: glitch-main 4s 1 alternate;
+                animation: glitch-main 4s 1 alternate-reverse forwards;
 
                 &:before,
-                &::after {
+                &:after {
                     --top: 0;
                     --left: 0;
                     --v-height: 30%;
@@ -131,11 +131,11 @@
                 }
 
                 &:before {
-                    animation: glitch-before 1.7s 1 alternate-reverse;
+                    animation: glitch-before 1.7s 1 alternate forwards;
                 }
 
                 &:after {
-                    animation: glitch-after 3.1s 1 alternate;
+                    animation: glitch-after 3.1s 1 alternate forwards;
                 }
             }
 
@@ -145,10 +145,10 @@
                 font-size: calc(var(--f) *0.667);
                 text-align: center;
                 transform: scaleX(var(--scale, 1));
-                animation: glitch-main 4s 1 0.75s alternate;
+                animation: glitch-main 4s 1 0.75s alternate forwards;
 
                 &:before,
-                &::after {
+                &:after {
                     --top: 0;
                     --left: 0;
                     --v-height: 30%;
@@ -167,11 +167,11 @@
                 }
 
                 &:before {
-                    animation: glitch-before 1.7s 1 0.75s alternate-reverse;
+                    animation: glitch-before 1.7s 1 0.75s alternate-reverse forwards;
                 }
 
                 &:after {
-                    animation: glitch-after 3.1s 1 0.75s alternate;
+                    animation: glitch-after 3.1s 1 0.75s alternate forwards;
                 }
             }
         }
@@ -209,38 +209,53 @@
     90% {
         --top: 0;
         --left: 0;
+        opacity: 0;
     }
 
     0% {
+        opacity: 0;
+    }
+
+    1% {
         --v-height: 15%;
+        opacity: 1;
     }
 
     20% {
         --left: .005;
+        opacity: 1;
     }
 
     40% {
         --left: .01;
         --v-height: 20%;
         --top: 3;
+        opacity: 1;
     }
 
     60% {
         --left: .03;
         --v-height: 25%;
         --top: 6;
+        opacity: 1;
     }
 
     80% {
         --left: .07;
         --v-height: 5%;
         --top: 8;
+        opacity: 1;
     }
 
-    100% {
+    99% {
         --left: .083;
         --v-height: 30%;
         --top: 1;
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
     }
 }
 
@@ -253,39 +268,54 @@
     90% {
         --top: 0;
         --left: 0;
+        opacity: 0;
     }
 
     0% {
+        opacity: 0;
+    }
+
+    1% {
         --v-height: 15%;
         --top: 10;
+        opacity: 1;
     }
 
     20% {
         --left: -.005;
+        opacity: 1;
     }
 
     40% {
         --left: -.01;
         --v-height: 17%;
         --top: 3;
+        opacity: 1;
     }
 
     60% {
         --left: -.03;
         --v-height: 35%;
         --top: 6;
+        opacity: 1;
     }
 
     80% {
         --left: -.07;
         --v-height: 5%;
         --top: 8;
+        opacity: 1;
     }
 
-    100% {
+    99% {
         --left: -.083;
         --v-height: 30%;
         --top: 1;
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
     }
 }
 
